# algorithms-and-data-structures

./: .gitignore  CMakeLists.txt  README.md
data_structures/: linked_list.hpp
src/algorithms/: main.cpp  search.hpp  sort.hpp
src/data_structures/: Istack.h  dynamic_stack.hpp  fixed_stack.hpp  generic_one_directional_node.hpp  linked_list.hpp  one_directional_node.hpp  stack.h
src/data_structures/linked_list/: doubly_linked_list.hpp  linked_lists.cpp  singly_linked_list.hpp
src/data_structures/node/: binary_tree_node.hpp  binary_tree_node_with_parent.hpp  doubly_linked_node.hpp  singly_linked_node.hpp
src/data_structures/priority_queue/: priority_queue.hpp  prqueue.cpp
src/data_structures/queue/: Iqueue.h  dynamic_queue.hpp  fixed_queue.hpp  linked_queue.hpp  queues.cpp
src/data_structures/stack/: Istack.h  dynamic_stack.hpp  fixed_stack.hpp  linked_stack.hpp  stacks.cpp
src/data_structures/stacks/: fixed_stack.hpp  stack.h  stacks.cpp
src/data_structures/tree/: binary_search_tree.hpp  trees.cpp
tests/: CMakeLists.txt  test_asd.cpp
